--- a/style.css
+++ b/style.css
@@ -29,7 +29,12 @@ body {
 
 .testimonials-grid {
   display: grid;
-  gap: 1rem;
+  gap: 1.5rem;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.grid-col-span-2 {
+  grid-column: span 2;
 }
 
 .testimonial {
@@ -37,6 +42,11 @@ body {
   padding: 2rem;
   border-radius: 0.5rem;
   box-shadow: 2.5rem 3.75rem 3rem -3rem hsl(var(--clr-secondary-400) / 0.25);
+}
+
+.testimonial:last-child {
+  grid-column-start: 4;
+  grid-row: 1/3;
 }
 
 .testimonial > p:first-of-type {
@@ -62,4 +72,12 @@ img,
 picture {
   max-width: 100%;
   display: block;
+}
+
+.bg-img {
+  background-image: url("images/bg-pattern-quotation.svg");
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-size: 3rem;
+  padding-top: 3rem;
 }
