--- a/style.css
+++ b/style.css
@@ -44,6 +44,30 @@ body {
   box-shadow: 2.5rem 3.75rem 3rem -3rem hsl(var(--clr-secondary-400) / 0.25);
 }
 
+.bg-primary-400 {
+  background: hsl(var(--clr-primary-400));
+}
+.bg-secondary-400 {
+  background: hsl(var(--clr-secondary-400));
+}
+.bg-secondary-500 {
+  background: hsl(var(--clr-secondary-500));
+}
+
+.bg-neutral-100 {
+  background: hsl(var(--clr-neutral-100));
+}
+
+.text-neutral-100 {
+  color: hsl(var(--clr-neutral-100));
+}
+.text-secondary-400 {
+  color: hsl(var(--clr-secondary-400));
+}
+.border-primary-400 {
+  border: 2px solid #a775f1;
+}
+
 .testimonial:last-child {
   grid-column-start: 4;
   grid-row: 1/3;
@@ -72,12 +96,4 @@ img,
 picture {
   max-width: 100%;
   display: block;
-}
-
-.bg-img {
-  background-image: url("images/bg-pattern-quotation.svg");
-  background-repeat: no-repeat;
-  background-position: top left;
-  background-size: 3rem;
-  padding-top: 3rem;
 }
